# rebeccablackos

./: README.txt  rebeccablacklinux_builder.sh  rebeccablackos_builder.sh
externalbuilders/: RBOS LOGO.odp  cleanup_srcbuild.sh  fsresizer  qemu-multiseat  rebeccablacklinux_phase0.sh  rebeccablacklinux_phase1.sh  rebeccablacklinux_phase2.sh  rebeccablacklinux_phase3.sh  rebeccablackos_phase0.sh  rebeccablackos_phase1.sh  rebeccablackos_phase2.sh  rebeccablackos_phase3.sh  rebuild_iso_with_nonfree_firmware.sh  test_RBOS.sh  test_RBOS_ISO.sh
externalbuilders/logo_wallpapers/: genasciilogos  genlogos  genwallpapers  rbos_logo_new_source.blend  wallpaper_boot.kra  wallpaper_boot.odp  wallpaper_data.txt
externalbuilders/logo_wallpapers/asciilogos/: logo_00_16.txt  logo_00_32.txt  logo_04_08.txt  logo_04_16.txt  logo_04_32.txt  logo_08_08.txt  logo_08_16.txt  logo_08_32.txt  logo_08_default.txt  logo_0_16.txt  logo_0_32.txt  logo_0_8.txt  logo_0_default.txt  logo_24_16.txt  logo_24_32.txt  logo_24_8.txt  logo_24_default.txt  logo_4_16.txt  logo_4_32.txt  logo_4_8.txt  logo_4_default.txt  logo_8_16.txt  logo_8_32.txt  logo_8_8.txt  logo_8_default.txt
rebeccablacklinux_files/etc/: environment  remastersys.conf  waylandservers
rebeccablacklinux_files/etc/apt/: sources.list
rebeccablacklinux_files/etc/init/: waylandloginmanager.conf
rebeccablacklinux_files/etc/kwin_wayland/: xorg.conf
rebeccablacklinux_files/etc/loginmanagerdisplay/: weston.ini
rebeccablacklinux_files/etc/pam.d/: runuser  system-auth
rebeccablacklinux_files/etc/skel/: .bashrc  wayland-desktop-shell.ini  (+1 more)
rebeccablacklinux_files/root/: .bashrc
rebeccablacklinux_files/tmp/: BINARYINSTALLS.txt  BINARYPACKAGES.txt  BUILDINSTALLS.txt  INSTALLS.txt  configure.sh  configure_phase1.sh  configure_phase2.sh  configure_phase3.sh  configure_phase3_helper.sh  gtk.diff  kdelibs.diff  thiago-intels-qt.diff  tmp-weston-patch  weston.diff  xf86-video-ati.diff  xf86-video-nouveau.patch  xf86-video-wlshm.diff  xserver.diff
rebeccablacklinux_files/usr/share/RBOS_PATCHES/kde-workspace/kwin/: CMakeLists.txt
rebeccablackos_files/etc/: footkiosk.conf  lsb-release  remastersys.conf  waylandloginmanager.conf
rebeccablackos_files/tmp/: BASE_INSTALLS.txt  INSTALLS.txt  INSTALLS_LIST.txt  configure_phase1.sh  configure_phase2.sh  configure_phase3.sh  configure_phase3_helper.sh  configure_phase3_symlinks.sh
(+906 files in other folders)
